@@ -1,3 +1,9 @@
+2002-08-16  Marcus Brinkmann  <marcus@gnu.org>
+
+	* proxy-defpager.c (S_default_pager_object_pages): New function.
+	(proxy_defpager_demuxer): Use S_default_pager_server (ie add the
+	prefix).
+
 2002-08-14  Marcus Brinkmann  <marcus@gnu.org>
 
 	* Makefile: Revert undocumented changes related to devpts that
